# vortrace

./: .gitignore  .pylintrc  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  plot_image.py  publish_pip.sh  pyproject.toml  requirements.txt  setup.py  vortrace_test.py  vortrace_testy.py
.github/workflows/: unit-test.yml  wheels.yml
cmake/: vortraceConfig.cmake.in
docs/: Makefile  QuickStart.ipynb  algorithm.rst  api.rst  changelog.rst  conf.py  contributing.rst  edgecases.rst  generate_images.py  index.rst  installation.rst  quickstart.rst
docs/api/: cpp.rst  index.rst  python.rst
docs/tutorials/: arbitrary_rays.rst  grid_projection.rst  index.rst  io.rst  multifield.rst  periodic.rst  plotting.rst  rotations.rst  single_ray.rst  slicing.rst  volume_rendering.rst
examples/: CMakeLists.txt  basic_projection.cpp  hdf5_reader.hpp  multifield.cpp  periodic.cpp  single_ray.cpp  slicing.cpp  volume_rendering.cpp
include/: brute_projection.hpp  mytypes.hpp  pointcloud.hpp  projection.hpp  ray.hpp  reduction.hpp  slice.hpp  vortrace.hpp
notebooks/: QuickStart.ipynb
paper/: paper.bib  paper.md
src/: bindings.cpp  brute_projection.cpp  pointcloud.cpp  projection.cpp  ray.cpp  reduction.cpp  slice.cpp
tests/: conftest.py  test_cpp.cpp  test_degenerate.py  test_grid.py  test_io.py  test_multifield.py  test_openmp.py  test_padding.py  test_periodic.py  test_plot.py  test_slice.py  test_traced_projection.py  test_volume_render.py  test_vortrace.py
tests/test_data/: galaxy_interaction-proj.npy  galaxy_interaction.hdf5
vortrace/: __init__.py  grid.py  io.py  plot.py  vortrace.py
