[project]
name = "vortrace"
version = "0.1"
description = "Fast projections through Voronoi meshes."
readme = "README.md"
requires-python = ">=3.7"

authors = [
  { name = "Angus Beane", email = "angus.beane@cfa.harvard.edu" },
  { name = "Matthew Smith", email = "msmith@mpa-garching.mpg.de" },
]

dependencies = [
  "numpy",
  "numba",
  "pybind11>=2.6.0",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: MacOS :: MacOS X",
]

[project.optional-dependencies]
dev  = ["h5py","pylint","pytest"]
test = ["h5py","pylint","pytest"]

[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "scikit-build-core>=0.10.0",
  "cmake>=3.15",
  "pybind11>=2.6.0"
]
build-backend = "scikit_build_core.build"